# findit-rewrite

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.dev.yml  flake.nix
assets/: main.css
src/: admin_api.rs  api.rs  app.rs  auth.rs  config.rs  db.rs  main.rs  models.rs
src/components/: admin.rs  category_list.rs  header.rs  home.rs  login.rs  mod.rs  service_card.rs
