[package]
name = "find-it"
version = "0.1.0"
authors = ["Felix Bjerhem Aronsson <felix.b.aronsson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
