[package]
name = "find-it"
version = "0.1.0"
authors = ["Felix Bjerhem Aronsson <felix.b.aronsson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["derive"] }
web-sys = { version = "0.3.70", features = ["Window", "Location"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bollard = "0.20"
tokio = { version = "1.50.0", features = ["full"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
